--- a/style.css
+++ b/style.css
@@ -3,19 +3,13 @@
   margin:0;
   padding:0;
   box-sizing: border-box;
-
   font-family: 'poppins', sans-serif;
 }
 body{
-  /* background-image:url(question-bank-logo.png); */
-  background:#AEB6BF  ;
-  /* background-position:10px 150px; */
-  /* background-size:cover; */
-  /* background-repeat: no-repeat; */
-  /* font-family: sans-serif; */
+  background: #AEB6BF;
 }
 nav{
-  background:#2E4053  ;
+  background: #2E4053;
   box-shadow: 0 0 5px #145A32;
 }
 nav .logo{
@@ -24,7 +18,7 @@ nav .logo{
   font-size: 30px;
   font-weight: 600;
   line-height: 50px;
-  padding: 10px 0 10px 20px;
+  padding: 10px 0 10px 10px;
 }
 nav:after{
   content:'';
@@ -43,7 +37,6 @@ nav ul li{
   display: inline-block;
   background:#2E4053;
   margin: 0 5px;
-  /* border-bottom: 0px solid #922B21; */
 }
 nav ul li a{
   color: white;
@@ -60,7 +53,7 @@ nav ul li a:hover{
 nav ul ul{
   position: absolute;
   top: 90px;
-  /* left:100px; */
+  left:100px;
   border-radius: 5px;
   opacity:0;
   visibility: hidden;
@@ -84,14 +77,7 @@ nav ul ul li a:hover{
   box-shadow: none;
   border-radius: 5px;
 }
-@media all and(max-width: 600px) {
-    nav{
-      padding: 5px 30px;
-    }
-    nav ul li{
-      width:100%;
-    }
-}
+
 .active{
   color: #239B56;
   border-radius: 5px;
@@ -102,16 +88,74 @@ nav ul ul li a:hover{
 }
 .special-font{
   font-size: 45px;
-  /* font-family: 'Teko', sans-serif; */
-font-family: 'Dosis', sans-serif;
-/* font-family: 'Comfortaa', cursive; */
+  font-family: 'Dosis', sans-serif;
+}
+#btn{
+  float: right;
+  visibility: hidden;
 }
 .menu-icon{
-   display:none;
+  display:none;
   float: right;
-  color: red;
   width: 80px;
   height: 62px;
   margin-top: 5px;
-  padding: 10px;
+  padding: 5px;
+  cursor: pointer;
+}
+.show input{
+  display: none;
+}
+@media all and (max-width: 968px) {
+  nav ul{
+    margin-right: 0px ;
+    float: left;
+  }
+  nav .logo{
+    padding-left: 30px;
+    width: 100%;
+  }
+  nav ul li, nav ul ul li{
+      display: block;
+      width: 100%;
+      font-size: 16px;
+  }
+  nav ul ul{
+    top: 70px;
+    position: static;
+    border-top: none;
+    float: none;
+    display: none;
+    opacity: 1;
+    visibility: visible;
+  }
+  nav ul ul a{
+    padding-left: 40px;
+  }
+  .show{
+    display:hidden;
+    color: white;
+    font-size: 18px;
+    padding: 0 20px;
+    line-height: 70px;
+    cursor: pointer;
+  }
+
+  .menu-icon{
+    display: block;
+    position: absolute;
+    right: 15px;
+    line-height: 70px;
+    font-size: 25px;
+    cursor: pointer;
+  }
+  nav ul li a:hover{
+    box-shadow: none;
+  }
+  .show + a, ul{
+    display: none;
+  }
+  [id^=btn]:checked + ul{
+    display: block;
+  }
 }
